--- a/Languages/English/Keyed/Desync_Menu_Options_v010600.xml
+++ b/Languages/English/Keyed/Desync_Menu_Options_v010600.xml
@@ -4,5 +4,6 @@
   <NewsUIAutoPause_title>News UI auto-pauses game</NewsUIAutoPause_title>
   <!-- EN: If enabled, opening any of the detailed UI of this mod will auto-pause the game. The effect is similar to opening the trade interface.\n\nEnabled by default. -->
   <NewsUIAutoPause_descr>If enabled, opening any of the detailed UI of this mod will auto-pause the game. The effect is similar to opening the trade interface.\n\nEnabled by default.</NewsUIAutoPause_descr>
-
+  <OnlySpreadInSameRoom_title>Pawns are only aware in same room</OnlySpreadInSameRoom_title>
+  <OnlySpreadInSameRoom_descr>If enabled, actions performed in another room will not automatically be known by pawns. If outside only events inside a certain range will be known.</OnlySpreadInSameRoom_descr>
 </LanguageData>
