--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,9 @@
 # Changelog for Desynchronized
 
+1.4.1 - Mod updated for 1.4 and passed autotests.
+Used DeepL to update translations for ChineseSimplified, French, German, Russian
+
+
 1.3.1 - More unique defname for the HugLib-news base-definition, to avoid conflicts with other mods. Also added logging-option
 
 
