Updated reference to the continued version of [SYR] Trait Value

--- a/Languages/French/DefInjected/ThoughtDef/Desync_Thoughts_Memory_Kidnap.xml
+++ b/Languages/French/DefInjected/ThoughtDef/Desync_Thoughts_Memory_Kidnap.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
   <!-- EN: colonist kidnapped -->
   <KnowColonistKidnapped.stages.colonist_kidnapped.label>coloniste kidnappé</KnowColonistKidnapped.stages.colonist_kidnapped.label>
