--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for Desynchronized
 
+1.5.1 - Updated reference to the continued version of [SYR] Trait Value
+
+
 1.5.0 - Mod updated for 1.5 and passed autotests
 
 
