--- a/Languages/ChineseTraditional/DefInjected/MainButtonDef/Desync_MainButtons_v010700.xml
+++ b/Languages/ChineseTraditional/DefInjected/MainButtonDef/Desync_MainButtons_v010700.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
   <!-- EN: desynchronized -->
   <DesynchronizedTab.label>家書難傳：主頁面</DesynchronizedTab.label>
