--- a/Languages/ChineseTraditional/DefInjected/PawnColumnDef/Desync_PawnColumns_v010700.xml
+++ b/Languages/ChineseTraditional/DefInjected/PawnColumnDef/Desync_PawnColumns_v010700.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
   <!-- EN: Count the number of news that are known by this pawn. -->
   <KnownNewsCount.headerTip>計算本pawn所記得的新聞的數量。</KnownNewsCount.headerTip>
