--- a/Languages/ChineseTraditional/Keyed/Desync_Menu_Options_v010600.xml
+++ b/Languages/ChineseTraditional/Keyed/Desync_Menu_Options_v010600.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
   <!-- EN: News UI auto-pauses game -->
   <NewsUIAutoPause_title>新聞介面會自動暫停遊戲</NewsUIAutoPause_title>
