--- a/Languages/French/DefInjected/StatDef/Desync_Stats_Pawns_Social_v010600.xml
+++ b/Languages/French/DefInjected/StatDef/Desync_Stats_Pawns_Social_v010600.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
   <!-- EN: news spread tendency (NST) -->
   <NewsSpreadTendency.label>Tendance à répandre des nouvelles</NewsSpreadTendency.label>
