--- a/Languages/French/DefInjected/TraitDef/Desync_Traits_v010502.xml
+++ b/Languages/French/DefInjected/TraitDef/Desync_Traits_v010502.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
   <!-- EN: secret-keeper -->
   <NewsSpreadTendency.degreeDatas.secretkeeper.label>gardien(ne) des secrets</NewsSpreadTendency.degreeDatas.secretkeeper.label>
