--- a/Languages/French/Keyed/Desync_Menu_Options_v010600.xml
+++ b/Languages/French/Keyed/Desync_Menu_Options_v010600.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
   <!-- EN: News UI auto-pauses game -->
   <NewsUIAutoPause_title>Nouvelle option d'autopause pour interface</NewsUIAutoPause_title>
